k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
  namespace: kiii-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
        - name: django
          image: slavkovskis/car-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: static-files
              mountPath: /app/static
      volumes:  
        - name: static-files
          emptyDir: {}
