k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: kiii-project
spec:
  selector:
    app: django
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
 # type: ClusterIP
